Agregue las etiquetas meta faltantes de description, keywords y author. Corregí titulo y limpie archivo readme

--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lista de tareas</title>
+    <meta
+    name="description"
+    content="Ejercicio N°5 de Trabajo Práctico de React correspondiente al Módulo N°3 del curso Desarrollador Full Stack dictado por RollingCodeSchool."
+  />
+  <meta
+    name="keywords"
+    content="Formulario, Lista de tareas, tarea, componentes, objeto props, estados, useState, useEffect, react, localStorage"
+  />
+  <meta name="author" content="Bruno Madozzo Romay" />
+    <title>Ejercicio N°5 - Lista de tareas | TP React</title>
   </head>
   <body>
     <div id="root"></div>
