--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
     name="description"
-    content="Ejercicio N°5 de Trabajo Práctico de React correspondiente al Módulo N°3 del curso Desarrollador Full Stack dictado por RollingCodeSchool."
+    content="Ejercicio N°2 de Trabajo Práctico de Backend correspondiente al Módulo N°4 del curso Desarrollador Full Stack dictado por RollingCodeSchool."
   />
   <meta
     name="keywords"
     content="Formulario, Lista de tareas, tarea, componentes, objeto props, estados, useState, useEffect, react, localStorage"
   />
   <meta name="author" content="Bruno Madozzo Romay" />
-    <title>Ejercicio N°5 - Lista de tareas | TP React</title>
+    <title>Lista de tareas</title>
   </head>
   <body>
     <div id="root"></div>
